# AutoDrone

./: README.md
Drone_Control_v2/: AutonomousMode.ino  Controller.ino  Debug.ino  Drone_Control_v2.ino  I2C.ino  ManualMode.ino  SensorMode.ino  Sensors.ino
objectTrack/: CMakeLists.txt  Makefile  README.md  main.c  objectTrack.cpp
